[package]
name = "image_save"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io = "0.0.2"
reqwest = { version = "0.11.24", features = ["blocking"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
scraper = "0.18.1"
serde_json = "1.0.114"
tokio = "1.36.0"
url = "2.5.0"
