[package]
name = "s3"
version = "0.1.0"
edition = "2021"
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_s3 = "0.48.0"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
